# DataBox

./: .gitignore  Cargo.toml  LICENSE  README-EN_US.md  README.md  build.py
DataBox/: DataBox-AddIn.dna  DataBox-AddIn.xll.config  DataBox.csproj  DataBox.sln  Language.cs  Loader.cs  WPSReg.cs
DataBox/Fun/: Geo.cs  Range.cs  Text.cs  Time.cs
DataBox/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
DataBox/Ribbon/: Basics.cs  DataBoxInfo.Designer.cs  DataBoxInfo.cs  NewConfig.Designer.cs  NewConfig.cs  NewConfig.resx  RibbonUI.xml
DataBox/Ribbon/Fun/: BatchExtraction.cs  DataQuickFind.cs
DataBox/RustFun/: Link.cs
Examples/: 示例.xlsx
Install/: AddInReg.cs  Install.csproj  Install.sln  Program.cs
box_core/: Cargo.toml
box_core/src/: _test.rs  geo.rs  lib.rs  text.rs  time.rs
box_core/src/ribbon/: batch_extraction.rs  data_box_info.rs  data_quick_find.rs  mod.rs
box_load/: Cargo.toml
box_load/src/: install.rs  main.rs  unstall.rs
