[package]
name = "tool_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "core"
crate-type = ["dylib"]

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
